# agentic-ai-engineering

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.claude/agents/: klew.md
.claude/skills/klew/: .gitignore  Makefile  SKILL.md
.claude/skills/web-ui-explorer/: SKILL.md
.claude/skills/yilsf/: SKILL.md
.github/workflows/: ci.yml  codeql.yml  klew-pr-gate.yml  semgrep.yml
docs/: ROADMAP.md  build-roadmap.md  demo-runbook.md  index.html  klew-roadmap.md  module-01.md  module-02.md  qa-team-strategy-plan.md  roadmap.md  verification-report.html
docs/brainstorms/: 2026-06-22-module-2-langchain-requirements.md  2026-07-10-receipts-requirements.md
docs/plans/: 2026-06-22-001-feat-module-2-langchain-plan.md  2026-07-10-001-feat-receipts-runtime-pr-verification-plan.md  2026-07-18-001-feat-klew-knowledge-durability-plan.md
e2e/: README.md  package-lock.json  package.json  playwright.config.ts  requirements.txt  todomvc-journeys.spec.ts  todomvc.pom.ts  todomvc.spec.ts
e2e/app/: index.html
e2e/samples/: plan.todomvc.json  rec.todomvc.spec.ts
e2e/scene/: README.md  chartjs.html  cytoscape.html  echarts.html  fabric.html  konva.html  package-lock.json  package.json  phaser.html  pixi.html  playwright.config.ts  scene-engines.spec.ts  three.html
e2e/sigma/: .gitignore  FINDINGS.md  package-lock.json  package.json  playwright.config.ts  scene-model.ts  sigma.spec.ts
e2e/sigma/app/: index.html
e2e/sigma/bridge/: cli.config.json  drive-through-cli.sh
experiments/: README.md  exp1_chain_vs_agent.py  exp2_ablation.py  exp3_weather_tool.py  harness.py  module1_playground.py  weather_tool.py
pr_gate/: README.md  __init__.py  bug_report.py  flakedoctor.py  gate.py  justify.py  pr-gate.config.json  qe_board.py  qe_board_template.html  reqdrift.json  reqdrift.py  requirements_source.py  run_history.py  tracker.py
src/documind/: __init__.py  agent.py  chain.py  config.py  lc.py  llm.py  speed_to_lead.py  tools.py
testguard/: CHECKLIST.md  EXTRACTION.md  LICENSE  README.md  SPEC.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
testguard/action/: action.yml
testguard/benchmark/: labels.json  run.ts
testguard/src/: cli.ts  config.ts  index.ts  model.ts  parser.ts  report.ts  score.ts  traceability.ts
testguard/src/checks/: dynamic.ts  (+1 more)
testguard/tests/: benchmark.test.ts  cli.test.ts  dynamic.test.ts  parser.test.ts  report.test.ts  static.test.ts  traceability.test.ts
tests/: test_a11y_report.py  test_agent.py  test_author.py  test_author_nl.py  test_chain.py  test_export_pom.py  test_flakedoctor.py  test_heal.py  test_knowledge_check.py  test_knowledge_scaffold.py  test_knowledge_split.py  test_lc.py  test_llm.py  test_pr_gate.py  test_qe_board.py  test_reqdrift.py  test_run_history.py  test_scene_adapters.py  test_speed_to_lead.py  test_tools.py
yilsf/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
yilsf/docs/: demo-runbook.md  framework.md  one-pager.md  talk-outline.md  visual-model.md
yilsf/eval/: README.md  baseline.ts  eval-mock.ts  golden-set.ts  metrics.ts  run-eval.ts
yilsf/examples/: from-jira.ts  login-testcases.ts  pr-review.ts
yilsf/src/: agents.ts  cli.ts  config.ts  constitutions.ts  guardrails.ts  index.ts  pipeline.ts  prompts.ts  schema.ts  structured.ts  types.ts
yilsf/tests/: cli.test.ts  code-review.test.ts  eval.test.ts  guardrails.test.ts  pipeline.test.ts  structured.test.ts  workflow.test.ts
(+75 files in other folders)
